--- a/README.rmd
+++ b/README.rmd
@@ -21,7 +21,7 @@ knitr::opts_chunk$set(
 [![R build status](https://github.com/Blue-Matter/MSEtool/workflows/R-CMD-check/badge.svg)](https://github.com/Blue-Matter/MSEtool/actions)
 `r badge_devel("blue-matter/MSEtool", "blue")`
 
-
+[![R-CMD-check](https://github.com/Blue-Matter/MSEtool/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/Blue-Matter/MSEtool/actions/workflows/R-CMD-check.yaml)
 <!-- badges: end -->
 
 The Management Strategy Evaluation toolkit (`MSEtool`) is the core package in the `openMSE` collection of packages. It contains the core functions for constructing operating models, simulating fishery dynamics, and evaluating the effectiveness of alternative management strategies using closed-loop simulation testing.
